--- a/style.css
+++ b/style.css
@@ -1,5 +1,12 @@
 @media screen and (min-width: 600px){
-   
+    .container{
+        background-color:#1B1464;
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 }
 
 *{
