--- a/InstagramProfileCard/style.css
+++ b/InstagramProfileCard/style.css
@@ -1,27 +1,34 @@
-.profile-card {
-    width: 350px;
+ body{
+    margin-top: 70px;
+ }
+ .profile-card {
+    width: 300px;
     padding: 20px;
     border: 1px solid #ddd;
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     text-align: center;
-    background-color: #fff;
+    background-color: #ffffff;
   }
   .profile-pic {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    margin-bottom: 15px;
+    width: 210px;
+    height: 200px;
+    border-radius: 15px;
+    margin-top: -65px;
+    margin-bottom: 25px;
+    box-shadow: 5px 5px 8px #888888;
   }
   .username {
     font-size: 1.5rem;
-    font-weight: bold;
-    margin-bottom: 10px;
+    font-weight:600;
+    color: #1d1f22;
   }
   .bio {
     font-size: 1rem;
-    color: #777;
-    margin-bottom: 20px;
+    font-weight: 500;
+    color:#a4b0be;
+    margin-bottom: 10px;
+    
   }
   .stats {
     display: flex;
@@ -33,36 +40,38 @@
   }
   .stat h6 {
     margin-bottom: 5px;
-    font-weight: bold;
+    font-weight:400;
+    color: #a4b0be;
   }
   .stat p {
     margin: 0;
-    color: #777;
+    color:#393f4c;
+    font-weight: 700;
   }
-.profile-card .header{
+.buttons{
     display: flex;
-    justify-content: space-between;
-}
-.profile-card .header .logo{
-     
-    font-size: 25px;
-}
-.profile-card .header .logo2{
-    font-size: 25px;
-}
-.footer{
-    display: flex;
+    justify-content: center;
     column-gap: 10px;
 }
-.footer .btn1,.btn2{
+.buttons .btn1{
     padding: 5px 35px;
     border-radius: 5px;
-    color: black;
+    color: #fff;
     font-weight: 600;
     border: none;
     text-decoration: none;
+    background-color: #ef5777;
 }
-.footer .btn1,.btn3{
+.buttons .btn2{
+    padding: 5px 35px;
+    border-radius: 5px;
+    color: #a4b0be;
+    font-weight: 600;
+    border: 2px solid #a4b0be;
+    text-decoration: none;
+    background-color:#fff;
+}
+.buttons .btn3{
     border: none;
     text-decoration: none;
     border-radius: 5px;
